--- a/wechain-demo/views/index.html
+++ b/wechain-demo/views/index.html
@@ -8,7 +8,7 @@
             </div>
             <div class='inner'>
                 <h1>Hello world</h1>
-                <h2>This is a Topic demo</h2>
+                <h2>This is a demo</h2>
             </div>
         </div>
 
