--- a/wechain-demo/views/index.html
+++ b/wechain-demo/views/index.html
@@ -4,7 +4,7 @@
     <div class="content">
         <div class="panel">
             <div class="header">
-                Topics
+                Home
             </div>
             <div class='inner'>
                 <h1>Hello world</h1>
