update the db url

--- a/wechain-demo/views/partials/navbar.html
+++ b/wechain-demo/views/partials/navbar.html
@@ -23,7 +23,7 @@
                     <a  href="/topic/create" class='nav-link'>Create Centent</a>
                 </li>43
                 <li>
-                    <a  href="/signin" class='nav-link'>Help&Support</a>
+                    <a  href="/" class='nav-link'>Help&Support</a>
                 </li>
 
                 {{#if current_user }}
