comment changes on subscrible

--- a/wechain-demo/views/index.html
+++ b/wechain-demo/views/index.html
@@ -7,10 +7,44 @@
                 Home
             </div>
             <div class='inner'>
-                <h1>Hello world</h1>
-                <h2>This is a demo</h2>
+                <img src="/public/images/WechatIMG40.png"/>
+                <h1>WeChain</h1>
+                <p style="font-size: large">Blockchain-powered online platform for P2P knowledge sharing. <br/>
+                    Think of Wechain as Ebay and Coursera combined.</p>
+                <br/><br/>
+                <h1>Problems</h1>
+                <ul style="font-size: large">
+                    <li>Lack of incentive for P2P knowledge sharing</li>
+                    <li>Untraceable learning records on multiple platforms</li>
+                    <li>No benchmark for content quality</li>
+                </ul>
+                <img src="public/images/market.png">
+                <br/>
+                <h1>Our Solutions</h1>
+                <p style="font-size: large">
+                    We aim to reshape the market of educational content distribution and give opportunity to everyone from all around the world to start sharing their personalized educational contents. Think of Wechain as of Ebay and Coursera combined.
+                </p>
+                <ul style="font-size: large">
+                    <li>Easy for content creation and distribution</li>
+                    <li>Maximum protection of intellectual property</li>
+                    <li>Incentive and user community with cryptocurrency rewards</li>
+                    <li>Traceable and verifiable powerd by the smartcontract</li>
+                </ul>
+                <br/>
+                <h1>Highlights</h1>
+                <img src="public/images/highlights.png" width="700 px" hight="560 px">
+                <br/>
+                <h1>Biz Model</h1>
+
+                <p style="font-size: large">
+                    <li>Think of Wechain as of Ebay and Coursera combined.</li>
+                    <li>We selling and distributing Educoin</li>
+                </p>
+
+                <br/><br/>
+                <img src="public/images/blockchain.png" width="700 px" hight="560 px">
+
             </div>
         </div>
-
     </div>
 </div>
