--- a/wechain-demo/views/layout.html
+++ b/wechain-demo/views/layout.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>{{title}}</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
     <link href="{{static '/public/stylesheets/style.css'}}" rel="stylesheet">
-    <!-- <script src="{{static '/public/javascripts/jquery-2.1.0.js'}}"> </script> -->
+    <script src="{{static '/public/javascripts/jquery-2.1.0.js'}}"> </script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="{{static '/public/web3.min.js'}}"></script>
+    <script src="{{static '/public/truffle-contract.js'}}"></script>
+    <script src="{{static '/public/app-pet.js'}}"></script>
+
+    <script type="application/javascript">
+        $(function() {
+            $(window).load(function() {
+                console.log("start");
+                App.initWeb3();
+            });
+        });
+    </script>
+
+
+
+
 </head>
 <body>
     {{{body}}}
     {{> footer }}
 </body>
 </html>
+
+
+
+
