--- a/wechain-demo/views/partials/sign/sidebar.html
+++ b/wechain-demo/views/partials/sign/sidebar.html
@@ -1,3 +1,4 @@
+<!--
 <div id="sidebar">
     <div class='panel'>
       <div class='header'>
@@ -13,4 +14,44 @@
         </ul>
       </div>
     </div>
+</div>
+-->
+
+
+
+<div id="sidebar">
+  <div class='panel'>
+    <div class='header'>
+      <span class='col_fade'>Features</span>
+    </div>
+    <div class='inner'>
+      <div class="my-3 p-3 bg-white rounded box-shadow">
+        <h6 class="border-bottom border-gray pb-2 mb-0">Leaderboard</h6>
+        <div class="media text-muted pt-3">
+          <img src="/public/images/one.png" alt="" class="mr-2 rounded">
+          <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+            <strong class="d-block text-gray-dark">@Yuanbo</strong>
+            Donec id elit non mi porta gravida at eget metus.
+          </p>
+        </div>
+        <div class="media text-muted pt-3">
+          <img src="/public/images/two.png" alt="" class="mr-2 rounded">
+          <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+            <strong class="d-block text-gray-dark">@Haoxiang</strong>
+            Donec id elit non mi porta gravida at eget metus.
+          </p>
+        </div>
+        <div class="media text-muted pt-3">
+          <img src="/public/images/three.png" alt="" class="mr-2 rounded">
+          <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+            <strong class="d-block text-gray-dark">@Jiaxiang</strong>
+            Donec id elit non mi porta gravida at eget metus.
+          </p>
+        </div>
+        <small class="d-block text-right mt-3">
+          <a href="#">All...</a>
+        </small>
+      </div>
+    </div>
+  </div>
 </div>
