--- a/wechain-demo/views/topic/detail.html
+++ b/wechain-demo/views/topic/detail.html
@@ -10,7 +10,7 @@
                     {{topic.title}}
                 </span>
                 <div class="changes">
-                    <span>发布于:{{formateDate topic.create_at}}，作者：{{topic.author_id}}</span>
+                    <span>Published at:{{formateDate topic.create_at}}，Author：{{topic.author_id}}</span>
                 </div>
             </div>
             <div class="inner">
@@ -18,6 +18,27 @@
                     {{{topic.content}}}
                 </div>
             </div>
+            <div class="comment">
+                <div id="disqus_thread" class="disqus-thread"></div>
+            </div>
         </div>
+
     </div>
+
+
+
+
 </div>
+
+<script id="dsq-count-scr" src='//freerambo.disqus.com/count.js' async></script>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'freerambo';
+    var disqus_url = "http://localhost:3005/";
+
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
