--- a/wechain-demo/views/topic/list.html
+++ b/wechain-demo/views/topic/list.html
@@ -6,16 +6,35 @@
     <div class="content">
         <div class="panel">
             <div class="header">
-                topic list
+                Topic List
             </div>
             <div class="inner">
-                topic list content
+<!--                topic list content
                 {{#each topics }}
                     <div class="cell">
                         <span>{{this.author_id}}</span>
                         <a href="/topic/{{ this._id }}">{{title}}</a>
                     </div>
-                {{/each}}
+                {{/each}}-->
+
+                <div class="row mb-2">
+                    {{#each topics}}
+                    <div class="col-md-6">
+                        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+                            <div class="card-body d-flex flex-column align-items-start">
+                                <strong class="d-inline-block mb-2 text-primary">{{tab}}</strong>
+                                <h3 class="mb-0">
+                                    <a class="text-dark" href="/topic/{{ this._id }}">{{title}}</a>
+                                </h3>
+                                <div class="mb-1 text-muted">{{create_at}}</div>
+                                <p class="card-text mb-auto">{{content}}</p>
+                                <button type="button" class="btn btn-primary">Buy</button>
+                            </div>
+                        </div>
+                    </div>
+                    {{/each}}
+                </div>
+
             </div>
         </div>
     </div>
